--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -131,15 +131,11 @@ let rd_forRange = (vmsf, rangef, rd_item) => (vm0, vm1, cudf) => {
 		let s_ = si;
 		let e_ = ei;
 
-		while (s_ < e_ && s_ < sx) {
-			rd_item(vms0[s_], null, cudf.childCud(domc0.firstChild));
-			s_++;
-		}
+		while (s_ < e_ && s_ < sx)
+			rd_item(vms0[s_++], null, cudf.childCud(domc0.firstChild));
 
-		while (s_ < e_ && ex < e_) {
-			e_--;
-			rd_item(vms0[e_], null, cudf.childCud(domc0.lastChild));
-		}
+		while (s_ < e_ && ex < e_)
+			rd_item(vms0[--e_], null, cudf.childCud(domc0.lastChild));
 
 		if (s_ == e_)
 			s_ = e_ = sx;
