--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -318,13 +318,8 @@ let rd_vm = rd
 let t = 0;
 let vscroll = { start: 0, vms: read().range(0, 256).list(), };
 
-let upd0 = vm => ({ ...vm, t: vm.t + 1, })
-
-let upd1 = vm => {
-	let vms0 = vm.vscroll.vms;
-	let vms1 = [].concat(vms0.slice(0, 3), [Math.random().toString()], vms0.slice(4, 256));
-	return { ...vm, vscroll: { ...vm.vscroll, vms: vms1, }, };
-};
+let upd0 = lens(t => t + 1).key('t').apply;
+let upd1 = lens(vm => Math.random().toString()).index(3).key('vms').key('vscroll').apply;
 
 setInterval(() => renderAgain(rd_vm, upd0), 1000);
 setInterval(() => renderAgain(rd_vm, upd1), 3000);
