--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -277,8 +277,7 @@ let rd = {
 	scope: (key, rdf) => (vm0, vm1, cudf) => rdf(
 		vm0 != null ? vm0[key] : null,
 		vm1 != null ? vm1[key] : null,
-		cudf
-	),
+		cudf),
 	span: () => rd_tag('span'),
 	tag: rd_tag,
 	ul: () => rd_tag('ul'),
