--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -289,9 +289,8 @@ let rdc = node0 => {
 		return rd_dom(vm => document.createComment(node0.nodeValue));
 	else if (node0.nodeType == Node.ELEMENT_NODE) {
 		let childNodes = node0.childNodes;
-		let as = {};
+		let as = {}, cs = [];
 		for (let a of node0.attributes) as[a.name] = a.value;
-		let cs = [];
 		for (let c of node0.childNodes) cs.push(rdc(c));
 		return rd.tag(node0.localName).attrs(as).children(...cs).rd();
 	} else if (node0.nodeType == Node.TEXT_NODE)
