--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -344,7 +344,7 @@ let rd_vm = rd
 		rd_parse(`
 			<rd-scope scope='message'>
 				<p style='font-weight: bold;'>
-					wow, { vm }
+					{ vm } within scope
 					<!-- comment -->
 				</p>
 			</rd-scope>
