--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -305,16 +305,16 @@ let rdc = node0 => {
 	if (node0.nodeType == Node.COMMENT_NODE) {
 		let sf = rds(node0.nodeValue);
 		return rd_dom(vm => document.createComment(sf(vm)));
-	} else if (node0.nodeType == Node.ELEMENT_NODE)
-		if (node0.localName == 'rd-scope')
+	} else if (node0.nodeType == Node.ELEMENT_NODE) {
+		let as = {}, cs = [], scope;
+		if (node0.localName == 'span' && (scope = node0.getAttribute('scope')) != null)
 			return rd.scope(node0.getAttribute('scope'), rdc(node0.childNodes[1]));
 		else {
-			let as = {}, cs = [];
 			for (let a of node0.attributes) as[a.name] = a.value;
 			for (let c of node0.childNodes) cs.push(rdc(c));
 			return rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
 		}
-	else if (node0.nodeType == Node.TEXT_NODE) {
+	} else if (node0.nodeType == Node.TEXT_NODE) {
 		let sf = rds(node0.nodeValue);
 		return rd.dom(vm => document.createTextNode(sf(vm)));
 	} else {
@@ -341,12 +341,12 @@ let rd_vm = rd
 			rd.p().style({ 'font-weight': 'bold', }).text().rd()
 		),
 		rd_parse(`
-			<rd-scope scope='message'>
+			<span scope='message'>
 				<p style='font-weight: bold;'>
 					{ vm } within scope
 					<!-- comment -->
 				</p>
-			</rd-scope>
+			</span>
 		`),
 		rd.scope('t',
 			rd.p().text().rd()
