--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -309,7 +309,7 @@ let rdc = node0 => {
 		let as = {}, cs = [], scope;
 		for (let c of node0.childNodes) cs.push(rdc(c));
 		if (node0.localName == 'span' && (scope = node0.getAttribute('scope')) != null)
-			return rd.scope(node0.getAttribute('scope'), rdc(node0.childNodes[1]));
+			return rd.scope(scope, rdc(node0.childNodes[1]));
 		else {
 			for (let a of node0.attributes) as[a.name] = a.value;
 			return rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
