--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -310,7 +310,7 @@ let rdc = node0 => {
 		for (let a of node0.attributes) as[a.name] = a.value;
 		for (let c of node0.childNodes) cs.push(rdc(c));
 		if (node0.localName == 'span' && (scope = node0.getAttribute('scope')) != null)
-			return rd.scope(scope, rdc(node0.childNodes[1]));
+			return rd.scope(scope, rd.tag(node0.localName).attrsf(vm => as).children(rdc(node0.childNodes[1])).rd());
 		else
 			return rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
 	} else if (node0.nodeType == Node.TEXT_NODE) {
