--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -307,12 +307,13 @@ let rdc = node0 => {
 		return rd.dom(vm => document.createComment(sf(vm)));
 	} else if (node0.nodeType == Node.ELEMENT_NODE) {
 		let as = {}, cs = [], scope;
-		for (let a of node0.attributes) as[a.name] = a.value;
 		for (let c of node0.childNodes) cs.push(rdc(c));
 		if (node0.localName == 'span' && (scope = node0.getAttribute('scope')) != null)
 			return rd.scope(scope, rd.tag(node0.localName).attrsf(vm => as).children(rdc(node0.childNodes[1])).rd());
-		else
+		else {
+			for (let a of node0.attributes) as[a.name] = a.value;
 			return rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
+		}
 	} else if (node0.nodeType == Node.TEXT_NODE) {
 		let sf = rds(node0.nodeValue);
 		return rd.dom(vm => document.createTextNode(sf(vm)));
