--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -308,11 +308,12 @@ let rdc = node0 => {
 	} else if (node0.nodeType == Node.ELEMENT_NODE) {
 		let as = {}, cs = [], scope;
 		for (let c of node0.childNodes) cs.push(rdc(c));
+		let bf = cs => rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
 		if (node0.localName == 'span' && (scope = node0.getAttribute('scope')) != null)
-			return rd.scope(scope, rd.tag(node0.localName).attrsf(vm => as).children(rdc(node0.childNodes[1])).rd());
+			return rd.scope(scope, bf([rdc(node0.childNodes[1]),]));
 		else {
 			for (let a of node0.attributes) as[a.name] = a.value;
-			return rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
+			return bf(cs);
 		}
 	} else if (node0.nodeType == Node.TEXT_NODE) {
 		let sf = rds(node0.nodeValue);
