--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -15,7 +15,7 @@ file:///home/ywsing/workspace/suite/src/main/html/render.html
 
 let c_cud_ = (dom, domc0, insertBefore) => {
 	let cud_ = {
-		childCud: child_ => c_cud(cud_.childRef, child_),
+		childCud: child_ => c_cud_(cud_.childRef, child_, null),
 		childRef: domc0,
 		create: c => dom.insertBefore(cud_.childRef = c, insertBefore),
 		delete: () => dom.removeChild(cud_.childRef),
