--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -15,7 +15,7 @@ file:///home/ywsing/workspace/suite/src/main/html/render.html
 
 let c_cud_ = (dom, domc0, insertBefore) => {
 	let cud_ = {
-		childCud: child_ => c_cud_(cud_.childRef, child_, null),
+		childCud: child_ => c_cud_(cud_.childRef, child_, child_ != null ? child_.nextSibling : null),
 		childRef: domc0,
 		create: c => dom.insertBefore(cud_.childRef = c, insertBefore),
 		delete: () => dom.removeChild(cud_.childRef),
@@ -310,7 +310,7 @@ let rdc = node0 => {
 		for (let c of node0.childNodes) cs.push(rdc(c));
 		let bf = cs => rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
 		if (node0.localName == 'span' && (scope = node0.getAttribute('scope')) != null)
-			return rd.scope(scope, bf([rdc(node0.childNodes[1]),]));
+			return rd.scope(scope, bf(cs));
 		else {
 			for (let a of node0.attributes) as[a.name] = a.value;
 			return bf(cs);
