--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -311,7 +311,7 @@ let rdc = node0 => {
 		for (let a of node0.attributes) as[a.name] = a.value;
 		for (let c of node0.childNodes) cs.push(rdc(c));
 
-		if (node0.getAttribute('for') != null)
+		if (node0.getAttribute('for-span') != null)
 			return rd.tag(node0.localName).for_(vm => vm, rd.span().children(...cs).rd()).rd();
 		else if ((scope = node0.getAttribute('scope')) != null)
 			return rd.scope(scope, bf(as, cs));
@@ -350,7 +350,7 @@ let rd_vm0 = rd_parse(`
 			{ vm }
 		</span>				
 		<span scope='fruits'>
-			<ul for='vm'>
+			<ul for-span='vm'>
 				<li>{ vm }</li>
 			</ul>
 		</span>
