--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -306,13 +306,14 @@ let rdc = node0 => {
 		let sf = rds(node0.nodeValue);
 		return rd.dom(vm => document.createComment(sf(vm)));
 	} else if (node0.nodeType == Node.ELEMENT_NODE) {
-		let bf = (as, cs) => rd.tag(node0.localName).attrsf(vm => as).children(...cs).rd();
+		let tag = rd.tag(node0.localName);
+		let bf = (as, cs) => tag.attrsf(vm => as).children(...cs).rd();
 		let as = {}, cs = [], scope;
 		for (let a of node0.attributes) as[a.name] = a.value;
 		for (let c of node0.childNodes) cs.push(rdc(c));
 
 		if (node0.getAttribute('for-span') != null)
-			return rd.tag(node0.localName).for_(vm => vm, rd.span().children(...cs).rd()).rd();
+			return tag.for_(vm => vm, rd.span().children(...cs).rd()).rd();
 		else if ((scope = node0.getAttribute('scope')) != null)
 			return rd.scope(scope, bf(as, cs));
 		else {
