--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -47,7 +47,7 @@ let rd_vm1 = rd.span().children(
 let rd_vm = rd
 	.span()
 	.style({ 'font-family': 'sans-serif', })
-	.children(
+	.child(
 		rd.list([
 			rd_vm0,
 			rd_vm1,
