--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -25,7 +25,7 @@ let rd_vm0 = rd_parse(`
 			{ vm }
 		</span>
 		<span scope='fruits'>
-			<ul for-span='vm'>
+			<ul for='vm'>
 				<li>{ vm }</li>
 			</ul>
 		</span>
