--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -15,17 +15,17 @@ file:///home/ywsing/suite/src/main/html/render.html
 	<script type='text/javascript'>
 let rd_vm0 = rd_parse(`
 	<span style='font-family: sans-serif;'>
-		<span scope='message'>
+		<span r_scope='message'>
 			<p style='font-weight: bold;'>
 				{ vm } within scope
 				<!-- comment -->
 			</p>
 		</span>
-		<span scope='t'>
+		<span r_scope='t'>
 			{ vm }
 		</span>
-		<span scope='fruits'>
-			<ul for='vm'>
+		<span r_scope='fruits'>
+			<ul r_for='vm'>
 				<li>{ vm }</li>
 			</ul>
 		</span>
