--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -32,7 +32,7 @@ let rd_vm0 = rd_parse(`
 	</span>
 `);
 
-let rd_vm1 = rd.span().children(
+let rd_vm1 = rd.span().children([
 	rd.scope('message',
 		rd.p().style({ 'font-weight': 'bold', }).text().rd()
 	),
@@ -42,7 +42,7 @@ let rd_vm1 = rd.span().children(
 	rd.scope('fruits',
 		rd.ul().for_(vm => vm, rd.li().text().rd()).rd()
 	),
-).rd();
+]).rd();
 
 let rd_vm = rd
 	.span()
