--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -13,21 +13,29 @@ file:///home/ywsing/suite/src/main/html/render.html
 	<script src='render.js'></script>
 
 	<script type='text/javascript'>
+let close;
+
 let rd_vm0 = rd.parse(`
 	<span style='font-family: sans-serif;'>
-		<span rd_scope='message'>
-			<p style='font-weight: bold;'>
-				{ vm } within scope
-				<!-- comment -->
-			</p>
+		<span>
+			<rd_scope scope='message'>
+				<p style='font-weight: bold;'>
+					{ vm } within scope
+					<!-- comment -->
+				</p>
+			</rd_scope>
 		</span>
-		<span rd_scope='t'>
-			{ vm }
+		<span>
+			<rd_scope scope='t'>
+				{ vm }
+			</rd_scope>
 		</span>
-		<span rd_scope='fruits'>
-			<ul rd_for='vm'>
-				<li>{ vm }</li>
-			</ul>
+		<span>
+			<rd_scope scope='fruits'>
+				<ul rd_for='vm'>
+					<li>{ vm }</li>
+				</ul>
+			</rd_scope>
 		</span>
 	</span>
 `);
@@ -51,6 +59,8 @@ let rd_vm = rd
 		rd.list([
 			rd_vm0,
 			rd_vm1,
+			rd.tag('button').child(rd.dom(vm => document.createTextNode('Close'))).listen('click', d => close()).rd(),
+			rd.p().rd(),
 			rd.scope('vscroll', rd
 				.vscrollf(200, 32,
 					rd.dom(vm => document.createTextNode('item ' + vm)),
@@ -69,12 +79,18 @@ let vscroll = { start: 0, vms: read().range(0, 256).list(), };
 let upd0 = lens.key('t').apply(t => t + 1);
 let upd1 = lens.key('vscroll').key('vms').index(3).apply(vm => Math.random().toString());
 
-setInterval(() => renderAgain(rd_vm, upd0), 1000);
-setInterval(() => renderAgain(rd_vm, upd1), 3000);
+let interval0 = setInterval(() => renderAgain(rd_vm, upd0), 1000);
+let interval1 = setInterval(() => renderAgain(rd_vm, upd1), 3000);
 
 renderAgain(rd_vm, vm => ({ t, vscroll, message: 'hello world0', fruits: ['banana',], }));
 renderAgain(rd_vm, vm => ({ t, vscroll, message: 'hello world1', fruits: ['apple', 'banana',], }));
 renderAgain(rd_vm, vm => ({ t, vscroll, message: 'hello world2', fruits: ['apple', 'orange', 'orange', 'banana',], }));
 renderAgain(rd_vm, vm => ({ t, vscroll, message: 'hello world~', fruits: ['banana', 'orange',], }));
+
+close = () => {
+	clearInterval(interval0);
+	clearInterval(interval1);
+	renderAgain(rd_vm, vm => null);
+};
 	</script>
 </html>
