--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -27,8 +27,8 @@ let rd_vm0 = rd.parse(`
 			{ vm }
 		</rd_scope>
 		<rd_scope scope='fruits'>
-			<ul rd_for='vm'>
-				<li>{ vm }</li>
+			<ul>
+				<rd_for><li>{ vm }</li></rd_for>
 			</ul>
 		</rd_scope>
 	</span>
